tests/ui/delegation/self-mapping-arguments-errors.stderr
error[E0308]: mismatched types
  --> $DIR/self-mapping-arguments-errors.rs:14:5
   |
LL | /     reuse impl MyAdd for W {
LL | |         println!("{self:?}");
LL | |         fn foo() {
LL | |             println!("hello");
...  |
LL | |         self.0
LL | |     }
   | |     ^
   | |     |
   | |     expected `usize`, found `W`
   | |_____arguments to this function are incorrect
   |       this return type influences the call expression's return type
   |
help: the return type of this call is `target_expr_doesnt_relower_when_defs_inside::W` due to the type of the argument passed
  --> $DIR/self-mapping-arguments-errors.rs:14:5
   |
LL | /     reuse impl MyAdd for W {
LL | |         println!("{self:?}");
LL | |         fn foo() {
LL | |             println!("hello");
...  |
LL | |         self.0
LL | |     }
   | |_____^ this argument influences the return type of `add`
note: method defined here
  --> $DIR/self-mapping-arguments-errors.rs:5:12
   |
LL |         fn add(self, other: Self) -> Self;
   |            ^^^       -----

error[E0308]: mismatched types
  --> $DIR/self-mapping-arguments-errors.rs:39:5
   |
LL |     reuse impl MyAdd for W { self.0 }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `Box<usize>`, found `Box<W>`
   |     arguments to this function are incorrect
   |     this return type influences the call expression's return type
   |
   = note: expected struct `Box<usize>`
              found struct `Box<complex_Self_doesnt_map::W>`
note: method defined here
  --> $DIR/self-mapping-arguments-errors.rs:30:12
   |
LL |         fn add(self, other: Box<Self>) -> Self;
   |            ^^^       -----

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
